--- a/angular.json
+++ b/angular.json
@@ -34,16 +34,9 @@
 						"tsConfig": "tsconfig.json",
 						"assets": [
 							"src/favicon.ico",
-							"src/assets",
-							{
-								"glob": "**/*",
-								"input": "node_modules/@taiga-ui/icons/src",
-								"output": "assets/taiga-ui/icons"
-							}
+							"src/assets"
 						],
 						"styles": [
-							"node_modules/@taiga-ui/core/styles/taiga-ui-theme.less",
-							"node_modules/@taiga-ui/core/styles/taiga-ui-fonts.less",
 							"src/styles/app.scss"
 						],
 						"scripts": []
