--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,5 +40,8 @@
 		"strictInjectionParameters": true,
 		"strictInputAccessModifiers": true,
 		"strictTemplates": true
+	},
+	"typeAcquisition": {
+		"enable": true
 	}
 }
